projects/podcast/player/style.css
body {
    font-family: Arial, sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    margin: 0;
    background-color: #f4f4f4;
}

.episode-element {
    background: #fff;
    padding: 10px;
    border-radius: 10px;
    width: 370px;
    top: 1rm;
    position: relative;
    margin-top: 10rm;
    margin-bottom: 2%;
    height: 10%;
}
.episode-list {
    overflow: auto;
    padding: 20px 50px 0px 30px;
    height: 83%;
    top: 0;
    width: 420px;
    position: fixed;
}

.audio-player {
    background: #fff;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 400px;
    position: fixed;
    bottom: 0;
    margin-bottom: 5%;
    z-index: 10;
    height: 14%;
}

.controls {
    display: flex;
    align-items: center;
}

.svg-button {
    width: 50px;
    height: 40px;
    background-color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 20%;
    cursor: pointer;
    margin-right: 10px;
}

input[type="range"] {
    margin: 5px 0;
}

#progress {
    flex-grow: 1;
    margin-right: 10px;
}

#volume {
    width: 80px;
}

.footer-podcast {
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
    padding: 1rem;
    height: 8%;
    background-color: rgb(243, 240, 240);
    color: rgb(0, 0, 0);
    text-align: center;
  }

